<resources>
    <string name="app_name">Baccus</string>
    <string name="action_settings">Ajustes</string>
    <string name="reload">Recargar</string>
    <string name="choose_an_option">Elija una opción</string>
    <string name="fit">Ajustada</string>
    <string name="center">Centrada</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Cargando...</string>
    <string name="red">Tinto</string>
    <string name="white">Blanco</string>
    <string name="rose">Rosado</string>
    <string name="other">Otro</string>
    <string name="wine_company_subtitle">BODEGA DEL VINO</string>
    <string name="wine_type_subtitle">TIPO DEL VINO</string>
    <string name="wine_origin_subtitle">DENOMINACIÓN DE ORIGEN</string>
    <string name="wine_grape_subtitle">UVA</string>
</resources>
