<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".controller.activity.WineActivity"
              android:orientation="vertical"
              android:background="@drawable/fondo">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/wine_image"
            android:src="@drawable/bembibre"
            android:layout_weight="1"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="wine_name"
                android:id="@+id/wine_name"
                style="@style/WineTitle"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/wine_rating"
                style="@style/WineRating"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/wine_company_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_company_subtitle"
                style="@style/WineSubtitle"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="wine_compay"
                    android:id="@+id/wine_company"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    style="@style/WineText"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/go_to_web_button"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/www"
                    android:elevation="5dp"/>



            </RelativeLayout>
            <TextView
                android:id="@+id/wine_type_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_type_subtitle"
                style="@style/WineSubtitle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="wine_type"
                android:id="@+id/wine_type"
                style="@style/WineText"/>

            <TextView
                android:id="@+id/wine_origin_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_origin_subtitle"
                style="@style/WineSubtitle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="wine_origin"
                android:id="@+id/wine_origin"
                style="@style/WineText"/>
            <TextView
                android:id="@+id/wine_grape_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine_grape_subtitle"
                style="@style/WineSubtitle"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView2">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/grapes_container">
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:id="@+id/scrollView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="wine_notes"
            android:id="@+id/wine_notes"
            style="@style/WineNotes"/>
    </ScrollView>

</LinearLayout>
